2008-05-24  Paul J Stevens <paul@nfg.nl>

	* src/dbmail-imapsession.c:
	fix boundary error in send_data
	* ChangeLog, src/auth.h, src/authmodule.c, src/modules/authldap.c:
	remove unused call
	* debian/dbmail-mysql.examples, debian/dbmail-mysql.install, 
	debian/dbmail-mysql.postinst, debian/dbmail-pgsql.examples, 
	debian/dbmail-pgsql.install, debian/dbmail-pgsql.postinst, 
	debian/dbmail.examples, debian/dbmail.install, 
	debian/dbmail.postinst, debian/rules:
	debian updates
	* ChangeLog, src/dbmail-imapsession.c, src/dbmail-imapsession.h, 
	src/imap4.c, src/imapcommands.c, src/server.c, src/server.h:
	running c100 without a glitch

2008-05-23  Paul Stevens <paul@nfg.nl>

	* ChangeLog, src/dbmail-imapsession.c:
	make dbmail_imap_session_printf async and fix boundary error in 
	send_data
	* src/dbmail-imapsession.c:
	small fix
	* ChangeLog, src/clientsession.c, src/dbmail-imapsession.c, 
	src/dbmail-imapsession.h, src/dbmailtypes.h, src/dm_db.c, 
	src/dm_debug.c, src/imap4.c, src/imapcommands.c, src/server.c, 
	test-scripts/testimap.py, test-scripts/testsearch.imap:
	basic thunderbird tests ok now

2008-05-20  Paul J Stevens <paul@nfg.nl>

	* src/dbmail-imapsession.c, src/dbmail-imapsession.h, src/imap4.c:
	minor cleanups

2008-05-19  Paul J Stevens <paul@nfg.nl>

	* src/dbmail-imapsession.c, src/dbmail-imapsession.h, 
	src/dbmailtypes.h, src/dm_db.c, src/dm_db.h, src/imap4.c, 
	src/imapcommands.c, src/server.c, test-scripts/testappend.txt:
	more cleanups
	* ChangeLog, src/dbmail-imapsession.h, src/imap4.c, 
	src/imapcommands.c:
	finish making imap commands threaded
	* src/dbmail-imapsession.h, src/imap4.c, src/imapcommands.c:
	return value and exit status cleanups
	* src/dbmail-imapsession.c, src/dbmail-imapsession.h, src/imap4.c, 
	src/imapcommands.c, src/server.c:
	thread framework now stable, make more commands threaded

2008-05-19  Paul J Stevens <paul@nfg.nl>

	* src/dbmail-imapsession.h, src/imap4.c, src/imapcommands.c:
	finish making imap commands threaded