@@ -95,6 +95,7 @@ int auth_load_driver(void)
 	||  !g_module_symbol(module, "auth_change_mailboxsize",     (gpointer)&auth->change_mailboxsize     )
 	||  !g_module_symbol(module, "auth_validate",               (gpointer)&auth->validate               )
 	||  !g_module_symbol(module, "auth_md5_validate",           (gpointer)&auth->md5_validate           )
+	||  !g_module_symbol(module, "auth_get_users_from_clientid",(gpointer)&auth->get_users_from_clientid)
 	||  !g_module_symbol(module, "auth_get_user_aliases",       (gpointer)&auth->get_user_aliases       )
 	||  !g_module_symbol(module, "auth_get_aliases_ext",        (gpointer)&auth->get_aliases_ext        )
 	||  !g_module_symbol(module, "auth_addalias",               (gpointer)&auth->addalias               )
